--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,9 @@
                 {%- endif -%}
                 {%- if site.plainwhite.social_links.twitter -%}
                 <a href="https://twitter.com/{{ site.plainwhite.social_links.twitter }}"><li><i class="icon-twitter-squared"></i></li></a>
+				{%- endif -%}
+				{%- if site.plainwhite.social_links.instagram -%}
+                <a href="https://instagram.com/{{ site.plainwhite.social_links.instagram }}"><li><i class="icon-instagram-squared"></i></li></a>
                 {%- endif -%}
 			</ul>
 			<p>&copy; 2019</p>
