--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,16 +12,17 @@ layout: default
 <form
   action="https://formspree.io/moqqvjrw"
   method="POST"
-  enctype="multipart/form-data"
 >
   <label>
     Your email:
     <input type="text" name="_replyto">
   </label>
   <label>
-    Your file:
-    <input type="file" name="upload">
+    Your message:
+    <textarea name="message"></textarea>
   </label>
+
+  <!-- your other form fields go here -->
 
   <button type="submit">Send</button>
 </form>
