--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,14 +9,15 @@ layout: default
 {{ content }}
 <!-- modify this form HTML and place wherever you want your form -->
 <br>
+
 <form
   action="https://formspree.io/moqqvjrw"
-  method="POST"
->
+  method="POST">
   <label>
     Your email:
     <input type="text" name="_replyto">
   </label>
+	<br>
   <label>
     Your message:
     <textarea name="message"></textarea>
