--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,6 +5,15 @@ layout: default
 {%- if page.title -%}
 <h1 class="page-heading">{{ page.title }}</h1>
 {%- endif -%}
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-141565153-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-141565153-1');
+</script>
 
 {{ content }}
 <!-- modify this form HTML and place wherever you want your form -->
